ente-public-galleries/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ente-public-galleries
spec:
  selector:
    app: ente-public-galleries
  ports:
    - port: 80
      targetPort: 80
